# qualys2human

./: .gitignore  CHANGELOG.md  CLAUDE.md  MinimumRequirement.md  README.md  dev.bat  dev.sh
backend/: alembic.ini  config.yaml  config.yaml.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21c190be64f1_add_preset_models.py  2705532d2c60_add_trend_models.py  8b7f0537afe6_initial_schema.py  a1b2c3d4e5f6_rename_vuln_layers.py  a3e1f8c94d12_widen_vulnerability_columns.py  b20fc7cc0496_add_auth_models.py  c4f8a2b71e03_add_vuln_layers.py  d5a2b3c41f07_host_dates_from_report.py  e6f3a4d52b18_add_watch_paths_table.py  f7b4c5d63a29_add_app_settings_and_latest_vulns.py
backend/src/q2h/: config.py  main.py  service.py
backend/src/q2h/api/: auth.py  branding.py  dashboard.py  export.py  hosts.py  imports.py  layers.py  monitoring.py  preferences.py  presets.py  settings.py  trends.py  users.py  vulnerabilities.py  watcher.py
backend/src/q2h/auth/: dependencies.py  service.py
backend/src/q2h/db/: __init__.py  engine.py  models.py  seed.py
backend/src/q2h/ingestion/: csv_parser.py  importer.py
backend/src/q2h/watcher/: service.py
backend/tests/: conftest.py  test_api_auth.py  test_api_branding.py  test_api_dashboard.py  test_api_export.py  test_api_full_detail.py  test_api_hosts.py  test_api_imports.py  test_api_monitoring.py  test_api_preferences.py  test_api_presets.py  test_api_trends.py  test_api_users.py  test_api_vulnerabilities.py  test_auth.py  test_csv_parser.py  test_importer.py  test_models.py  test_watcher.py
scripts/: build.py  (+1 more)
(+67 files in other folders)
